# ffacg

./: Cargo.toml
.sqlx/: query-d087a4d14da2d44d6783650ebb3f63517313a277683219d0eaa1f142da053289.json
docker/db/: init.sql
docker/ffacg/: compose.yml
ffacg-rust/: .env  Cargo.toml  README.md
ffacg-rust/.sqlx/: query-a504ac1a4ce39b1e4bcb6d38c816f0a4d578f29ed31ab356b44dd5d9e42a616a.json  query-b85794ff8a0dd85ade8712709b2b44977086d368d2baf49053ce4611bf8c02fd.json
ffacg-rust/src/: main.rs
ffacg-rust/src/model/: wallet.rs
ffacg-vue/: README.md  package.json  tsconfig.json  vite.config.ts
ffacg-vue/src/: App.vue  components.d.ts
ffacg-vue/src/components/content/: AcgMain.vue  AnimeCard.vue
ffacg-vue/src/components/footer/: AcgFooter.vue
ffacg-vue/src/components/header/: AcgHeader.vue
ffacg-vue/src/router/: index.ts
ffacg-vue/src/stores/: anime.ts  downStore.ts
ffacg-vue/src/views/: Home.vue
src/model/: anime.rs  mod.rs  user.rs
src/repo/: user.rs
src/route/: user.rs
src/service/: user.rs
