[package]
name = "ffacg"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "*", features = ["http2"] }
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rust_decimal = { version = "*", features = ["macros"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "tls-rustls",
    "postgres",
    "macros",
    "derive",
    "migrate",
    "time",
    "chrono",
    "rust_decimal",
    "uuid",
    "json",
] }
uuid = { version = "*", features = ["v4", "v7"] }
sha3 = "*"
base64 = "*"

validator = { version = "*", features = ["derive"] }